--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-Hello World
+<!DOCTYPE html>
+<html lang="zh">
+
+<head>
+    <meta charset="utf-8">
+    <title>hlherbert个人网站</title>
+</head>
+
+<body>
+<header>
+    <h1>个人网站</h1>
+</header>
+<nav>
+    <ul>
+        <li><a href="html/cv.htm">个人简介</a></li>
+        <li><a href="html/demos.htm">成果展示</a></li>
+    </ul>
+</nav>
+<main></main>
+<footer></footer>
+</body>
+
+</html>
