--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <nav>
     <ul>
         <li><a href="html/cv.htm">个人简介</a></li>
-        <li><a href="html/demos.htm">成果展示</a></li>
+        <li><a href="html/demo.htm">成果展示</a></li>
     </ul>
 </nav>
 <main></main>
