--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
 <body>
 <header>
-    <h1>Herbert的小站</h1>
+    <h1>Herbert的小站 - Herbert's Homepage</h1>
 </header>
 <nav>
     <ul>
-        <li><a href="html/cv.htm">个人简介</a></li>
-        <li><a href="html/demo.htm">成果展示</a></li>
-        <li><a href="https://github.com/hlherbert">个人GitHub</a></li>
+        <li><a href="html/introduction.htm">个人简介 - Introduction</a></li>
+        <li><a href="html/projects.htm">成果展示 - Projects</a></li>
+        <li><a href="https://github.com/hlherbert">个人GitHub - My GitHub</a></li>
     </ul>
 </nav>
 <main></main>
