增加英文翻译

--- a/html/projects.htm
+++ b/html/projects.htm
@@ -419,9 +419,11 @@ lang=EN-US>&nbsp;</span></p>
 
 <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt'><b><span
 style='font-size:14.0pt;font-family:"微软雅黑","sans-serif";color:#2E75B5'>跨平台动态图形符号标绘平台（</span></b><b><span
-lang=EN-US style='font-size:14.0pt;color:#2E75B5'>SuperMap) </span></b><b><span
-lang=EN-US style='font-family:"Arial","sans-serif"'>Cross-platform Dynamic Symbol
-Mark Platform</span></b></p>
+lang=EN-US style='font-size:14.0pt;color:#2E75B5'>SuperMap)      Cross-platform
+Dynamic Symbol Mark Platform</span></b><b><span style='font-size:14.0pt;
+font-family:宋体;color:#2E75B5'>（</span></b><b><span lang=EN-US style='font-size:
+14.0pt;color:#2E75B5'>SuperMap</span></b><b><span style='font-size:14.0pt;
+font-family:宋体;color:#2E75B5'>）</span></b></p>
 
 <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt'><span
 lang=EN-US>SuperMap</span><span style='font-family:"微软雅黑","sans-serif"'>提供了二维、三维标绘技术，它是实现在超图底层平台的一项技术，可以构建二三维一体化标号库，方便灵活的标绘二维、三维点标号、线面标号，提供三维态势推演功能。主要应用于军事作战方案、应急处置方案、公安围捕方案等指挥调度方案中，结合三维场景进行图形标绘。通过提供的各类具有特殊意义的图形、模型标号，可以在三维场景上非常直观、准确地展现事件的处置方案，提高事件处置过程中会商和沟通的效率。</span></p>
