--- a/html/introduction.htm
+++ b/html/introduction.htm
@@ -309,7 +309,7 @@ lang=EN-US> Basic Info</span></span></b></p>
 style='font-family:"微软雅黑","sans-serif"'>黄黎<span lang=EN-US>Huang, Li</span></span></p>
 
 <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt'><span
-lang=EN-US>hlherbert@sina.com</span></p>
+lang=EN-US>huanglichengdu@sina.com</span></p>
 
 <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt'><b><span
 lang=EN-US>&nbsp;</span></b></p>
