--- a/html/demo.htm
+++ b/html/demo.htm
@@ -2,8 +2,9 @@
 
 <head>
     <meta charset="utf-8">
-<meta http-equiv=Content-Type content="text/html; charset=gb2312">
-<meta name=Generator content="Microsoft Word 12 (filtered)">
+	<meta http-equiv=Content-Type content="text/html; charset=gb2312">
+	<meta name=Generator content="Microsoft Word 12 (filtered)">
+	<link rel="stylesheet" type="text/css" href="/css/footer.css">
 <style>
 <!--
  /* Font Definitions */
@@ -585,7 +586,9 @@ lang=EN-US style='font-family:"微软雅黑","sans-serif"'>&nbsp;</span></p>
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
 </div>
-
+<footer>
+	<script type="text/javascript" src="/js/stat.js"></script>
+</footer>
 </body>
 
 </html>
