--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>hlherbert个人网站</title>
     <!-- <script type="text/javascript" src="/js/stat.js"></script> -->
+    <link rel="stylesheet" type="text/css" href="/css/footer.css">
 </head>
 
 <body>
@@ -20,7 +21,7 @@
 </nav>
 <main></main>
 <footer>
-    <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1278611579'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s9.cnzz.com/z_stat.php%3Fid%3D1278611579%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
+    <script type="text/javascript" src="/js/stat.js"></script>
 </footer>
 </body>
 
