--- a/html/introduction.htm
+++ b/html/introduction.htm
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=Generator content="Microsoft Word 12 (filtered)">
+<link rel="stylesheet" type="text/css" href="/css/footer.css">
 <style>
 <!--
  /* Font Definitions */
@@ -544,6 +545,9 @@ lang=EN-US style='font-family:"微软雅黑","sans-serif"'>&nbsp;</span></p>
 
 </div>
 
+<footer>
+	<script type="text/javascript" src="/js/stat.js"></script>
+</footer>
 </body>
 
 </html>
